src/test/error/class3.lns
class StaticClass {
   let val:int;
   static fn func() {
      self.val; // error
   }
}
